# nerf_bridge

./: .gitignore  LICENSE  README.md  data  nerfbridge_sample_config.json  nerfstudio_config_sample.json  nsros_config.json  pyproject.toml  ros_train.py
configs/: desk.json  method_configs.py
launch/: ocam_ros.launch  orb.launch  orb_ocam.launch
nerfbridge/: method_configs.py  pose_utils.py  ros_dataloader.py  ros_datamanager.py  ros_dataparser.py  ros_dataset.py  ros_splatfacto.py  ros_trainer.py  ros_viewer.py
nsros/: method_configs.py  ros_dataloader.py  ros_datamanager.py  ros_dataparser.py  ros_dataset.py  ros_trainer.py
scripts/: download_data.py
