[project]
name = "nerfbridge"
version = "0.1"

dependencies = [
	"nerfstudio==0.3.4"
]

[tool.setuptools.packages.find]
include = ["nerfbridge*"]

[tool.pyright]
extraPaths = ["nerfbridge"]

[project.entry-points.'nerfstudio.method_configs']
ros-nerfacto = 'nerfbridge.method_configs:RosNerfacto'
ros-depth-nerfacto = 'nerfbridge.method_configs:RosDepthNerfacto'
